[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

# --- Ruff configuration ---
[tool.ruff]
# Можно установить желаемую длину строки (стандарт PEP 8 - 79, популярный современный - 88)
# Если раскомментируешь, убери '#' в начале строки ниже
# line-length = 88

[tool.ruff.lint]
# Выбираем базовые наборы правил:
# E - ошибки стиля pycodestyle (например, отступы, пробелы)
# F - ошибки логики от Pyflakes (например, неиспользуемые импорты/переменные)
# W - предупреждения стиля pycodestyle (менее критичные)
# I - ошибки сортировки импортов (isort)
select = ["E", "F", "W", "I"]

# Сюда можно добавить коды правил для игнорирования, если потребуется
# Например, если захочешь игнорировать ошибки слишком длинных строк (E501)
# ignore = ["E501"]